# ppro

./: .gitignore  CMakeLists.txt  INSTALL  INTEGRATION_GUIDE.md  LICENSE  QUICKSTART.md  README.md  README.md.kr.back  VERSION.cmake  ppro-config.cmake.in
cmake/: compiler_flags_IntelLLVM_Fortran.cmake  compiler_flags_Intel_Fortran.cmake  ppro_compiler_flags.cmake
examples/: CMakeLists.txt  README.md  standalone_test.f90
fix/: README.txt  cband_rain_coefs.txt  sband_rain_coefs.txt  sband_snow_coefs.txt
fix/zhang21_coefs/: README.txt  cband_graupel_coefs.txt  cband_hail_coefs.txt  cband_snow_coefs.txt  sband_graupel_coefs.txt  sband_hail_coefs.txt
src/: CMakeLists.txt  CODE_SEPARATION_ANALYSIS.md  README.md  dualpol_op_mod.f90  dualpol_op_tlad_mod.f90
src/tcwa2/: CMakeLists.txt  tcwa2_core_mod.f90  tcwa2_forward_mod.f90
src/zhang21/: CMakeLists.txt  zhang21_core_mod.f90  zhang21_forward_mod.f90  zhang21_tlad_mod.f90
